# stl_iterators

./: .gitignore  README.md  index.html  night.css  snippets.cpp  tuning.css
code/: .clang-format  CMakeLists.txt
code/src/: CMakeLists.txt  coord.hpp  kernel.hpp  main.cpp  max_pool.hpp  max_pool1.hpp  perf.cpp  shape.hpp  tensor.hpp  validation.hpp
code/src/mp_kernel_iterator/: CMakeLists.txt  _max_pool_transform_.cpp  kernel.hpp  max_pool.hpp
code/src/mp_raw/: CMakeLists.txt  max_pool.hpp
code/src/perf/: perf.cpp
code/src/structs/: CMakeLists.txt  coord.hpp  tensor.hpp
drawings/: presentation-logo.drawio
img/: iterator-pattern-drawings.drawio
